# FSDS_NOV_deepCNNClassifier

./: .gitignore  README.md  dvc.yaml  init_setup.sh  params.yaml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml
artifacts/: .gitignore
artifacts/data_ingestion/: .gitignore
configs/: config.yaml
prediction_service/: Dockerfile  app.py  requirements.txt
research/: st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05_trails.ipynb  trials.ipynb
research/mlflow_dir/: argv_ex.py  example.py
src/deepClassifier/: __init__.py
src/deepClassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/deepClassifier/config/: __init__.py  configuration.py
src/deepClassifier/constants/: __init__.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/deepClassifier/utils/: __init__.py  common.py
tests/integration/: test_data_ingestion.py
tests/unit/: test_data_ingestion.py  test_utils.py
